--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <DOCTYPE html>
-<html>
+  <html>
+
   <head>
     <title>
       SciBooks home
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="script.js"></script>
   </head>
+
   <body>
     <header>
       <div class="headTitle">
@@ -24,7 +26,8 @@
           </b>
         </h2>
         <span style="text-align:right;">
-          <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+          <i class="icon fa fa-github-square" style="color:black;"
+            onclick="window.location.href='https://github.com/caleb-sudo';"></i>
           <i class="icon fa fa-youtube-play" style="color:red;"></i>
           <i class="icon fa fa-twitter" style="color:aqua;"></i>
           <i class="icon fa fa-facebook-square" style="color:blue;"></i>
@@ -55,15 +58,16 @@
             <img src="resources/book8(1).jpg" width="40%" height="auto">
             <hr>
             <p>
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+              <span
+                style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
                 25% off
               </span>
               <br>
               <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-                $60.00 
+                $60.00
               </span>
               <span style="font-size:20px">
-                 $45.00
+                $45.00
               </span>
               <br>
               <span style="font-size:15px;">
@@ -77,15 +81,16 @@
             <img src="resources/book6(1).jpg" width="40%" height="auto">
             <hr>
             <p>
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+              <span
+                style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
                 50% off
               </span>
               <br>
               <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-                $18.00 
+                $18.00
               </span>
               <span style="font-size:20px">
-                 $9.00
+                $9.00
               </span>
               <br>
               <span style="font-size:15px;">
@@ -99,7 +104,8 @@
             <img src="resources/book16(1).jpg" width="40%" height="auto">
             <hr>
             <p>
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+              <span
+                style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
                 50% off
               </span>
               <br>
@@ -164,7 +170,7 @@
         </th>
         <th onclick="">
           <div class="card">
-            
+
           </div>
         </th>
       </tr>
@@ -195,7 +201,6 @@
             </a>
           </li>
         </ul>
-        
       </div>
       <br>
       <br>
@@ -209,4 +214,5 @@
       </h2>
     </footer>
   </body>
-</html>
+
+  </html>
