--- a/questions.html
+++ b/questions.html
@@ -1,86 +1,131 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title>
-      SciBooks sorter
-    </title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="script.js" defer></script>
-  </head>
-  <body>
-    <header>
-      <div class="headTitle">
-        <p>
-          <b>
-            <span style="color:blue;">
-              Sci
-            </span>
-            <span style="color:green;">
-              Books
-            </span>
-          </b>
-        </p>
-      </div>
-    </header>
-    <nav class="stick">
-      <div class="menu fa fa-home" onclick="window.location.href='index.html';">
-        Home
-      </div>
-      <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
-        Lookup
-      </div>
-      <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
-        Cart
-      </div>
-    </nav>
-    <section>
-      <button class="collapsible">
-        How do I return or Exchange books?
-      </button>
-      <div class="content">
-        <p>
-          hello world
-        </p>
-      </div>
-      <button class="collapsible">
-        How are your books shipped?
-      </button>
-      <div class="content">
-        <p>
-          hello world
-        </p>
-      </div>
-      <button class="collapsible">
-        Am I able to know when my books are shipped?
-      </button>
-      <div class="content">
-        <p>
-          If you Login with your email you should get an email that the books you ordered have been shipped.
-        </p>
-      </div>
-      <button class="collapsible">
-        What are our policies?
-      </button>
-      <div class="content">
-        <p>
-          hello world
-        </p>
-      </div>
-      <button class="collapsible">
-        What Payment options do we accept?
-      </button>
-      <div class="content">
-        <p>
-          We only accept payments through Paypal, and Credit Cards such as Visa, American Express, Mastercard, Discover, and JCB.
-        </p>
-      </div>
-    </section>
-    <script src="script.js"></script>
-    <footer>
-      
-    </footer>
-  </body>
+
+<head>
+  <title>
+    SciBooks sorter
+  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="script.js" defer></script>
+</head>
+
+<body>
+  <header>
+    <div class="headTitle">
+      <h2>
+        <b>
+          <span style="color:blue;">
+            Sci
+          </span>
+          <span style="color:green;">
+            Books
+          </span>
+        </b>
+      </h2>
+      <span style="text-align:right;">
+        <i class="icon fa fa-github-square" style="color:black;"
+          onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+        <i class="icon fa fa-youtube-play" style="color:red;"></i>
+        <i class="icon fa fa-twitter" style="color:aqua;"></i>
+        <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+      </span>
+    </div>
+  </header>
+  <nav class="stick">
+    <div class="menu fa fa-home" onclick="window.location.href='index.html';">
+      Home
+    </div>
+    <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
+      Lookup
+    </div>
+    <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
+      Cart
+    </div>
+  </nav>
+  <section>
+    <button class="collapsible">
+      How do I return or Exchange books?
+    </button>
+    <div class="content">
+      <p>
+        hello world
+      </p>
+    </div>
+    <button class="collapsible">
+      How are your books shipped?
+    </button>
+    <div class="content">
+      <p>
+        hello world
+      </p>
+    </div>
+    <button class="collapsible">
+      Am I able to know when my books are shipped?
+    </button>
+    <div class="content">
+      <p>
+        If you Login with your email you should get an email that the books you ordered have been shipped.
+      </p>
+    </div>
+    <button class="collapsible">
+      What are our policies?
+    </button>
+    <div class="content">
+      <p>
+        hello world
+      </p>
+    </div>
+    <button class="collapsible">
+      What Payment options do we accept?
+    </button>
+    <div class="content">
+      <p>
+        We only accept payments through Paypal, and Credit Cards such as Visa, American Express, Mastercard, Discover,
+        and JCB.
+      </p>
+    </div>
+  </section>
+  <script src="script.js"></script>
+  <footer>
+    <div style="margin-left:49%;">
+      <ul style="text-align:center;">
+        <li style="display:flex;">
+          <a href="questions.html" class="footerLink">
+            <b>
+              Frequently Asked Questions
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="contacts.html" class="footerLink">
+            <b>
+              Contacts
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="security.html" class="footerLink">
+            <b>
+              Security
+            </b>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <h2>
+      <span style="color:blue;">
+        Sci
+      </span>
+      <span style="color:green;">
+        Books
+      </span>
+    </h2>
+  </footer>
+</body>
+
 </html>
