--- a/BABQ.html
+++ b/BABQ.html
@@ -1,124 +1,171 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Breif Answers, Big Questions
-        </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <header>
-          <div class="headTitle">
-            <p>
-              <b>
-                <span style="color:blue;">
-                  Sci
-                </span>
-                <span style="color:green;">
-                  Books
-                </span>
-              </b>
-            </p>
-          </div>
-        </header>
-        <nav class="stick">
-          <div class="menu fa fa-home" onclick="window.location.href='index.html';">
-            Home
-          </div>
-          <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
-            Lookup
-          </div>
-          <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
-            Cart
-          </div>
-        </nav>
-        <hr>
-        <br>
-            <div class="pictures" onclick="Increase();">
-                <table>
-                    <tr>
-                        <th>
-                            <img src="resources/book8(1).jpg" id="pict1" width="auto" height="700px">
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>
-                            <img src="resources/book8(2).jpg" id="pict2" width="100px" height="100px">
-                        </th>
-                        <th>
-                            <img src="resources/book8(3).jpg" id="pict3" width="100px" height="100px">
-                        </th>
-                        <th>
-                            <img src="resources/book8(4).jpg" id="pict4" width="100px" height="100px">
-                        </th>
-                        <th>
-                          <img src="resources/book8(5).jpg" id="pict5" width="100px" height="100px">
-                        </th>
-                    </tr>
-                </table>
-            </div>
-            <fieldset class="desc">
-              <div>
-                <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
-                    <b>
-                        25% off
-                    </b>
-                </span>
-                <br>
-                <h2 id="bookTitle">
-                    Breif Answers, Big Questions
-                    <br>
-                    <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-                        $60.00 
-                    </span>
-                    <span style="font-size:20px">
-                        $45.00
-                    </span>
-                </h2>
-                <h3 id="bookAuther">
-                    By: Stephen Hawking
-                </h3>
-                <hr>
-                <p id="bookDescription"></p>
-                <div id="payDeliver">
-                    <button class="checkOutBtn" onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
-                        <b>
-                          Add To Cart
-                        </b>
-                    </button>
-                    <button class="buy-btn" onclick="checkOutClicked();">
-                      <b>
-                        Buy Now
-                      </b>
-                    </button>
-                </div>
-              </div>
-            </fieldset>
-            <div class="paymentForm" id="checkOutForm">
-              <div class="paymentForm-container">
-                <h2>
-                  Select your payment method
-                </h2>
-                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-                  <i class="fa fa-paypal" style="color:blue;"></i>
-                  Paypal
-                </button>
-                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-                  <i class="fa fa-credit-card" style="color:black;"></i>
-                  Credit Card
-                </button>
-                <button class="btn cancel" onclick="checkOutCanceled();">
-                  Cancel
-                </button>
-              </div>
-            </div>
-            <script src="cart.js"></script>
-            <script src="script.js"></script>
-        <footer>
 
-        </footer>
-    </body>
+<head>
+  <title>
+    Breif Answers, Big Questions
+  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <header>
+    <div class="headTitle">
+      <h2>
+        <b>
+          <span style="color:blue;">
+            Sci
+          </span>
+          <span style="color:green;">
+            Books
+          </span>
+        </b>
+      </h2>
+      <span style="text-align:right;">
+        <i class="icon fa fa-github-square" style="color:black;"
+          onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+        <i class="icon fa fa-youtube-play" style="color:red;"></i>
+        <i class="icon fa fa-twitter" style="color:aqua;"></i>
+        <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+      </span>
+    </div>
+  </header>
+  <nav class="stick">
+    <div class="menu fa fa-home" onclick="window.location.href='index.html';">
+      Home
+    </div>
+    <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
+      Lookup
+    </div>
+    <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
+      Cart
+    </div>
+  </nav>
+  <hr>
+  <br>
+  <div class="pictures" onclick="Increase();">
+    <table>
+      <tr>
+        <th>
+          <img src="resources/book8(1).jpg" id="pict1" width="auto" height="700px">
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <img src="resources/book8(2).jpg" id="pict2" width="100px" height="100px">
+        </th>
+        <th>
+          <img src="resources/book8(3).jpg" id="pict3" width="100px" height="100px">
+        </th>
+        <th>
+          <img src="resources/book8(4).jpg" id="pict4" width="100px" height="100px">
+        </th>
+        <th>
+          <img src="resources/book8(5).jpg" id="pict5" width="100px" height="100px">
+        </th>
+      </tr>
+    </table>
+  </div>
+  <fieldset class="desc">
+    <div>
+      <span
+        style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+        <b>
+          25% off
+        </b>
+      </span>
+      <br>
+      <h2 id="bookTitle">
+        Breif Answers, Big Questions
+        <br>
+        <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+          $60.00
+        </span>
+        <span style="font-size:20px">
+          $45.00
+        </span>
+      </h2>
+      <h3 id="bookAuther">
+        By: Stephen Hawking
+      </h3>
+      <hr>
+      <p id="bookDescription"></p>
+      <div id="payDeliver">
+        <button class="checkOutBtn"
+          onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
+          <b>
+            Add To Cart
+          </b>
+        </button>
+        <button class="buy-btn" onclick="checkOutClicked();">
+          <b>
+            Buy Now
+          </b>
+        </button>
+      </div>
+    </div>
+  </fieldset>
+  <div class="paymentForm" id="checkOutForm">
+    <div class="paymentForm-container">
+      <h2>
+        Select your payment method
+      </h2>
+      <button class="btn"
+        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+        <i class="fa fa-paypal" style="color:blue;"></i>
+        Paypal
+      </button>
+      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+        <i class="fa fa-credit-card" style="color:black;"></i>
+        Credit Card
+      </button>
+      <button class="btn cancel" onclick="checkOutCanceled();">
+        Cancel
+      </button>
+    </div>
+  </div>
+  <script src="cart.js"></script>
+  <script src="script.js"></script>
+  <footer>
+    <div style="margin-left:49%;">
+      <ul style="text-align:center;">
+        <li style="display:flex;">
+          <a href="questions.html" class="footerLink">
+            <b>
+              Frequently Asked Questions
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="contacts.html" class="footerLink">
+            <b>
+              Contacts
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="security.html" class="footerLink">
+            <b>
+              Security
+            </b>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <h2>
+      <span style="color:blue;">
+        Sci
+      </span>
+      <span style="color:green;">
+        Books
+      </span>
+    </h2>
+  </footer>
+</body>
+
 </html>
