--- a/Cart.html
+++ b/Cart.html
@@ -1,21 +1,23 @@
 <!DOCOTYPE html>
-<html>
+  <html>
+
   <head>
     <title>
       Your Cart
     </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="cartStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="script.js"></script>
   </head>
+
   <body>
     <header>
       <div class="headTitle">
-        <p>
+        <h2>
           <b>
             <span style="color:blue;">
               Sci
@@ -24,7 +26,14 @@
               Books
             </span>
           </b>
-        </p>
+        </h2>
+        <span style="text-align:right;">
+          <i class="icon fa fa-github-square" style="color:black;"
+            onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+          <i class="icon fa fa-youtube-play" style="color:red;"></i>
+          <i class="icon fa fa-twitter" style="color:aqua;"></i>
+          <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+        </span>
       </div>
     </header>
     <nav class="stick">
@@ -71,7 +80,8 @@
         <h2>
           Select your payment method
         </h2>
-        <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+        <button class="btn"
+          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
           <i class="fa fa-paypal" style="color:blue;"></i>
           Paypal
         </button>
@@ -87,11 +97,46 @@
     <script src="cart.js"></script>
     <fieldset style="float:right;">
       <h2 id="totals">
-        
+
       </h2>
     </fieldset>
     <footer>
-
+      <div style="margin-left:49%;">
+        <ul style="text-align:center;">
+          <li style="display:flex;">
+            <a href="questions.html" class="footerLink">
+              <b>
+                Frequently Asked Questions
+              </b>
+            </a>
+          </li>
+          <li style="display:flex;">
+            <a href="contacts.html" class="footerLink">
+              <b>
+                Contacts
+              </b>
+            </a>
+          </li>
+          <li style="display:flex;">
+            <a href="security.html" class="footerLink">
+              <b>
+                Security
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <br>
+      <br>
+      <h2>
+        <span style="color:blue;">
+          Sci
+        </span>
+        <span style="color:green;">
+          Books
+        </span>
+      </h2>
     </footer>
   </body>
-</html>
+
+  </html>
