--- a/M.html
+++ b/M.html
@@ -1,123 +1,174 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Molecules: The Elements and the Architecture of Everything
-        </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <header>
-          <div class="headTitle">
-            <p>
-              <b>
-                <span style="color:blue;">
-                  Sci
-                </span>
-                <span style="color:green;">
-                  Books
-                </span>
-              </b>
-            </p>
-          </div>
-        </header>
-        <nav class="stick">
-          <div class="menu fa fa-home" onclick="window.location.href='index.html';">
-            Home
-          </div>
-          <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
-            Lookup
-          </div>
-          <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
-            Cart
-          </div>
-        </nav>
-        <hr>
-        <br>
-        <div class="row">
-          <div class="column">
-            <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-        </div>
-        
-        <div class="container">
-          <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-          <img id="expandedImg" style="width:auto;height:0.1%;">
-          <div id="imgtext"></div>
-        </div>
-            <fieldset class="desc">
-              <div>
-                <h2 id="bookTitle">
-                    Molecules: The Elements and the Architecture of Everything
-                    <br>
-                    $20.00
-                </h2>
-                <h3 id="bookAuther">
-                    By: Theodore Gray
-                </h3>
-                <hr>
-                <p id="bookDescription">
-                    Theodore Gray begins with an explanation of how atoms bond to form molecules and compounds, as well as the difference between organic and inorganic chemistry. 
-                    He then goes on to explore the vast array of materials molecules can create, including: soaps and solvents; goops and oils; rocks and ores; ropes and 
-                    fibers; painkillers and dangerous drugs; sweeteners; perfumes and stink bombs; colors and pigments; and controversial compounds including asbestos, 
-                    CFCs, and thimerosal.
-                    <br>
-                    <br>
-                    Big, gorgeous photographs, as well as diagrams of the compounds and their chemical bonds, rendered with never before seen beauty, 
-                    fill the pages and capture molecules in their various states.
-                    <br>
-                    <br>
-                    As he did in The Elements, Gray shows us molecules as we've never seen them before. It's the perfect book for his loyal fans who've been eager 
-                    for more and for anyone fascinated with the mysteries of the material world.
-                </p>
-                <div id="payDeliver">
-                    <button class="checkOutBtn" onclick="localStorage.setItem('Molecules: The Elements and the Architecture of Everything', '1');alert('added to your cart');">
-                        <b>
-                          Add To Cart
-                        </b>
-                    </button>
-                    <button class="buy-btn" onclick="checkOutClicked();">
-                      <b>
-                        Buy Now
-                      </b>
-                    </button>
-                </div>
-              </div>
-            </fieldset>
-            <div class="paymentForm" id="checkOutForm">
-              <div class="paymentForm-container">
-                <h2>
-                  Select your payment method
-                </h2>
-                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-                  <i class="fa fa-paypal" style="color:blue;"></i>
-                  Paypal
-                </button>
-                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-                  <i class="fa fa-credit-card" style="color:black;"></i>
-                  Credit Card
-                </button>
-                <button class="btn cancel" onclick="checkOutCanceled()">
-                  Cancel
-                </button>
-              </div>
-            </div>
-            <script src="cart.js"></script>
-            <script src="script.js"></script>
-        <footer>
 
-        </footer>
-    </body>
+<head>
+  <title>
+    Molecules: The Elements and the Architecture of Everything
+  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <header>
+    <div class="headTitle">
+      <h2>
+        <b>
+          <span style="color:blue;">
+            Sci
+          </span>
+          <span style="color:green;">
+            Books
+          </span>
+        </b>
+      </h2>
+      <span style="text-align:right;">
+        <i class="icon fa fa-github-square" style="color:black;"
+          onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+        <i class="icon fa fa-youtube-play" style="color:red;"></i>
+        <i class="icon fa fa-twitter" style="color:aqua;"></i>
+        <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+      </span>
+    </div>
+  </header>
+  <nav class="stick">
+    <div class="menu fa fa-home" onclick="window.location.href='index.html';">
+      Home
+    </div>
+    <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
+      Lookup
+    </div>
+    <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
+      Cart
+    </div>
+  </nav>
+  <hr>
+  <br>
+  <div class="row">
+    <div class="column">
+      <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+    </div>
+    <div class="column">
+      <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+    </div>
+    <div class="column">
+      <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+    </div>
+    <div class="column">
+      <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+    </div>
+  </div>
+
+  <div class="container">
+    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+    <img id="expandedImg" style="width:auto;height:0.1%;">
+    <div id="imgtext"></div>
+  </div>
+  <fieldset class="desc">
+    <div>
+      <h2 id="bookTitle">
+        Molecules: The Elements and the Architecture of Everything
+        <br>
+        $20.00
+      </h2>
+      <h3 id="bookAuther">
+        By: Theodore Gray
+      </h3>
+      <hr>
+      <p id="bookDescription">
+        Theodore Gray begins with an explanation of how atoms bond to form molecules and compounds, as well as the
+        difference between organic and inorganic chemistry.
+        He then goes on to explore the vast array of materials molecules can create, including: soaps and solvents;
+        goops and oils; rocks and ores; ropes and
+        fibers; painkillers and dangerous drugs; sweeteners; perfumes and stink bombs; colors and pigments; and
+        controversial compounds including asbestos,
+        CFCs, and thimerosal.
+        <br>
+        <br>
+        Big, gorgeous photographs, as well as diagrams of the compounds and their chemical bonds, rendered with never
+        before seen beauty,
+        fill the pages and capture molecules in their various states.
+        <br>
+        <br>
+        As he did in The Elements, Gray shows us molecules as we've never seen them before. It's the perfect book for
+        his loyal fans who've been eager
+        for more and for anyone fascinated with the mysteries of the material world.
+      </p>
+      <div id="payDeliver">
+        <button class="checkOutBtn"
+          onclick="localStorage.setItem('Molecules: The Elements and the Architecture of Everything', '1');alert('added to your cart');">
+          <b>
+            Add To Cart
+          </b>
+        </button>
+        <button class="buy-btn" onclick="checkOutClicked();">
+          <b>
+            Buy Now
+          </b>
+        </button>
+      </div>
+    </div>
+  </fieldset>
+  <div class="paymentForm" id="checkOutForm">
+    <div class="paymentForm-container">
+      <h2>
+        Select your payment method
+      </h2>
+      <button class="btn"
+        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+        <i class="fa fa-paypal" style="color:blue;"></i>
+        Paypal
+      </button>
+      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+        <i class="fa fa-credit-card" style="color:black;"></i>
+        Credit Card
+      </button>
+      <button class="btn cancel" onclick="checkOutCanceled()">
+        Cancel
+      </button>
+    </div>
+  </div>
+  <script src="cart.js"></script>
+  <script src="script.js"></script>
+  <footer>
+    <div style="margin-left:49%;">
+      <ul style="text-align:center;">
+        <li style="display:flex;">
+          <a href="questions.html" class="footerLink">
+            <b>
+              Frequently Asked Questions
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="contacts.html" class="footerLink">
+            <b>
+              Contacts
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="security.html" class="footerLink">
+            <b>
+              Security
+            </b>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <h2>
+      <span style="color:blue;">
+        Sci
+      </span>
+      <span style="color:green;">
+        Books
+      </span>
+    </h2>
+  </footer>
+</body>
+
 </html>
