--- a/OOT.html
+++ b/OOT.html
@@ -10,20 +10,26 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header>
-          <div class="headTitle">
-            <p>
-              <b>
-                <span style="color:blue;">
-                  Sci
-                </span>
-                <span style="color:green;">
-                  Books
-                </span>
-              </b>
-            </p>
-          </div>
-        </header>
+      <header>
+        <div class="headTitle">
+          <h2>
+            <b>
+              <span style="color:blue;">
+                Sci
+              </span>
+              <span style="color:green;">
+                Books
+              </span>
+            </b>
+          </h2>
+          <span style="text-align:right;">
+            <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+            <i class="icon fa fa-youtube-play" style="color:red;"></i>
+            <i class="icon fa fa-twitter" style="color:aqua;"></i>
+            <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+          </span>
+        </div>
+      </header>
         <nav class="stick">
           <div class="menu fa fa-home" onclick="window.location.href='index.html';">
             Home
@@ -116,8 +122,42 @@
             </div>
             <script src="cart.js"></script>
             <script src="script.js"></script>
-        <footer>
-
-        </footer>
+            <footer>
+              <div style="margin-left:49%;">
+                <ul style="text-align:center;">
+                  <li style="display:flex;">
+                    <a href="questions.html" class="footerLink">
+                      <b>
+                        Frequently Asked Questions
+                      </b>
+                    </a>
+                  </li>
+                  <li style="display:flex;">
+                    <a href="contacts.html" class="footerLink">
+                      <b>
+                        Contacts
+                      </b>
+                    </a>
+                  </li>
+                  <li style="display:flex;">
+                    <a href="security.html" class="footerLink">
+                      <b>
+                        Security
+                      </b>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <br>
+              <br>
+              <h2>
+                <span style="color:blue;">
+                  Sci
+                </span>
+                <span style="color:green;">
+                  Books
+                </span>
+              </h2>
+            </footer>
     </body>
 </html>
