--- a/TAM.html
+++ b/TAM.html
@@ -1,129 +1,182 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            The Apollo Murders
-        </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <header>
-          <div class="headTitle">
-            <p>
-              <b>
-                <span style="color:blue;">
-                  Sci
-                </span>
-                <span style="color:green;">
-                  Books
-                </span>
-              </b>
-            </p>
-          </div>
-        </header>
-        <nav class="stick">
-          <div class="menu fa fa-home" onclick="window.location.href='index.html';">
-            Home
-          </div>
-          <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
-            Lookup
-          </div>
-          <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
-            Cart
-          </div>
-        </nav>
-        <hr>
-        <br>
-        <div class="row">
-          <div class="column">
-            <img src="resources/book19(1).jpg" width="auto" height="100px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book19(2).jpg" width="auto" height="100px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book19(3).jpg" width="auto" height="100px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book19(4).jpg" width="auto" height="100px" onclick="inlarge(this);">
-          </div>
-        </div>
-        
-        <div class="container">
-          <span onclick="this.parentElement.style.display='none'" class="closebtn">
-            &times;
-        </span>
-          <img id="expandedImg" style="width:auto;height:700px;">
-          <div id="imgtext"></div>
-        </div>
-            <fieldset class="desc">
-              <div>
-                <h2 id="bookTitle">
-                    The Apollo Murders
-                    <br>
-                    $25.00
-                </h2>
-                <h3 id="bookAuther">
-                    By: Chris Hadfield
-                </h3>
-                <hr>
-                <p id="bookDescription">
-                    1973. A final, top-secret mission to the Moon. Three astronauts in a tiny module, a quarter of a million miles from home. A quarter of a million 
-                    miles from help.
-                    <br>
-                    <br>
-                    As Russian and American crews sprint for a secret bounty hidden away on the lunar surface, old rivalries blossom and the political stakes 
-                    are stretched to the breaking point back on Earth. Houston flight controller Kazimieras "Kaz" Zemeckis must do all he can to keep the NASA crew 
-                    together, while staying one step ahead of his Soviet rivals. But not everyone on board Apollo 18 is quite who they appear to be.
-                    <br>
-                    <br>
-                    Full of the fascinating technical detail that fans of The Martian loved, and reminiscent of the thrilling claustrophobia, 
-                    twists and tension of The Hunt for Red October, The Apollo Murders puts you right there in the moment. Experience the fierce G-forces of 
-                    launch, the frozen loneliness of Space and the fear of holding on to the outside of a spacecraft orbiting the Earth at 17,000 miles per hour, 
-                    as told by a former Commander of the International Space Station who has done all of those things in real life.
-                    <br>
-                    <br>
-                    Strap in and count down for the ride of a lifetime.
-                </p>
-                <div id="payDeliver">
-                    <button class="checkOutBtn" onclick="localStorage.setItem('The Apolo Murders', '1');alert('added to your cart');">
-                        <b>
-                          Add To Cart
-                        </b>
-                    </button>
-                    <button class="buy-btn" onclick="checkOutClicked();">
-                      <b>
-                        Buy Now
-                      </b>
-                    </button>
-                </div>
-              </div>
-            </fieldset>
-            <div class="paymentForm" id="checkOutForm">
-              <div class="paymentForm-container">
-                <h2>
-                  Select your payment method
-                </h2>
-                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-                  <i class="fa fa-paypal" style="color:blue;"></i>
-                  Paypal
-                </button>
-                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-                  <i class="fa fa-credit-card" style="color:black;"></i>
-                  Credit Card
-                </button>
-                <button class="btn cancel" onclick="checkOutCanceled();">
-                  Cancel
-                </button>
-              </div>
-            </div>
-            <script src="cart.js"></script>
-            <script src="script.js"></script>
-        <footer>
 
-        </footer>
-    </body>
+<head>
+  <title>
+    The Apollo Murders
+  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <header>
+    <div class="headTitle">
+      <h2>
+        <b>
+          <span style="color:blue;">
+            Sci
+          </span>
+          <span style="color:green;">
+            Books
+          </span>
+        </b>
+      </h2>
+      <span style="text-align:right;">
+        <i class="icon fa fa-github-square" style="color:black;"
+          onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+        <i class="icon fa fa-youtube-play" style="color:red;"></i>
+        <i class="icon fa fa-twitter" style="color:aqua;"></i>
+        <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+      </span>
+    </div>
+  </header>
+  <nav class="stick">
+    <div class="menu fa fa-home" onclick="window.location.href='index.html';">
+      Home
+    </div>
+    <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
+      Lookup
+    </div>
+    <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
+      Cart
+    </div>
+  </nav>
+  <hr>
+  <br>
+  <div class="row">
+    <div class="column">
+      <img src="resources/book19(1).jpg" width="auto" height="100px" onclick="inlarge(this);">
+    </div>
+    <div class="column">
+      <img src="resources/book19(2).jpg" width="auto" height="100px" onclick="inlarge(this);">
+    </div>
+    <div class="column">
+      <img src="resources/book19(3).jpg" width="auto" height="100px" onclick="inlarge(this);">
+    </div>
+    <div class="column">
+      <img src="resources/book19(4).jpg" width="auto" height="100px" onclick="inlarge(this);">
+    </div>
+  </div>
+
+  <div class="container">
+    <span onclick="this.parentElement.style.display='none'" class="closebtn">
+      &times;
+    </span>
+    <img id="expandedImg" style="width:auto;height:700px;">
+    <div id="imgtext"></div>
+  </div>
+  <fieldset class="desc">
+    <div>
+      <h2 id="bookTitle">
+        The Apollo Murders
+        <br>
+        $25.00
+      </h2>
+      <h3 id="bookAuther">
+        By: Chris Hadfield
+      </h3>
+      <hr>
+      <p id="bookDescription">
+        1973. A final, top-secret mission to the Moon. Three astronauts in a tiny module, a quarter of a million miles
+        from home. A quarter of a million
+        miles from help.
+        <br>
+        <br>
+        As Russian and American crews sprint for a secret bounty hidden away on the lunar surface, old rivalries blossom
+        and the political stakes
+        are stretched to the breaking point back on Earth. Houston flight controller Kazimieras "Kaz" Zemeckis must do
+        all he can to keep the NASA crew
+        together, while staying one step ahead of his Soviet rivals. But not everyone on board Apollo 18 is quite who
+        they appear to be.
+        <br>
+        <br>
+        Full of the fascinating technical detail that fans of The Martian loved, and reminiscent of the thrilling
+        claustrophobia,
+        twists and tension of The Hunt for Red October, The Apollo Murders puts you right there in the moment.
+        Experience the fierce G-forces of
+        launch, the frozen loneliness of Space and the fear of holding on to the outside of a spacecraft orbiting the
+        Earth at 17,000 miles per hour,
+        as told by a former Commander of the International Space Station who has done all of those things in real life.
+        <br>
+        <br>
+        Strap in and count down for the ride of a lifetime.
+      </p>
+      <div id="payDeliver">
+        <button class="checkOutBtn"
+          onclick="localStorage.setItem('The Apolo Murders', '1');alert('added to your cart');">
+          <b>
+            Add To Cart
+          </b>
+        </button>
+        <button class="buy-btn" onclick="checkOutClicked();">
+          <b>
+            Buy Now
+          </b>
+        </button>
+      </div>
+    </div>
+  </fieldset>
+  <div class="paymentForm" id="checkOutForm">
+    <div class="paymentForm-container">
+      <h2>
+        Select your payment method
+      </h2>
+      <button class="btn"
+        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+        <i class="fa fa-paypal" style="color:blue;"></i>
+        Paypal
+      </button>
+      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+        <i class="fa fa-credit-card" style="color:black;"></i>
+        Credit Card
+      </button>
+      <button class="btn cancel" onclick="checkOutCanceled();">
+        Cancel
+      </button>
+    </div>
+  </div>
+  <script src="cart.js"></script>
+  <script src="script.js"></script>
+  <footer>
+    <div style="margin-left:49%;">
+      <ul style="text-align:center;">
+        <li style="display:flex;">
+          <a href="questions.html" class="footerLink">
+            <b>
+              Frequently Asked Questions
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="contacts.html" class="footerLink">
+            <b>
+              Contacts
+            </b>
+          </a>
+        </li>
+        <li style="display:flex;">
+          <a href="security.html" class="footerLink">
+            <b>
+              Security
+            </b>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <br>
+    <br>
+    <h2>
+      <span style="color:blue;">
+        Sci
+      </span>
+      <span style="color:green;">
+        Books
+      </span>
+    </h2>
+  </footer>
+</body>
+
 </html>
