--- a/TSSOS.html
+++ b/TSSOS.html
@@ -44,6 +44,7 @@
       Cart
     </div>
   </nav>
+<section>
   <hr>
   <br>
   <div class="row">
@@ -60,7 +61,6 @@
       <img src="resources/book21(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
     </div>
   </div>
-
   <div class="container">
     <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
     <img id="expandedImg" style="width:auto;height:0.1%;">
@@ -136,6 +136,7 @@
       </button>
     </div>
   </div>
+</section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <footer>
