--- a/BABQ.html
+++ b/BABQ.html
@@ -44,89 +44,91 @@
       Cart
     </div>
   </nav>
-  <hr>
-  <br>
-  <div class="pictures" onclick="Increase();">
-    <table>
-      <tr>
-        <th>
-          <img src="resources/book8(1).jpg" id="pict1" width="auto" height="700px">
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <img src="resources/book8(2).jpg" id="pict2" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book8(3).jpg" id="pict3" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book8(4).jpg" id="pict4" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book8(5).jpg" id="pict5" width="100px" height="100px">
-        </th>
-      </tr>
-    </table>
-  </div>
-  <fieldset class="desc">
-    <div>
-      <span
-        style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
-        <b>
-          25% off
-        </b>
-      </span>
-      <br>
-      <h2 id="bookTitle">
-        Breif Answers, Big Questions
+  <section>
+    <hr>
+    <br>
+    <div class="pictures" onclick="Increase();">
+      <table>
+        <tr>
+          <th>
+            <img src="resources/book8(1).jpg" id="pict1" width="auto" height="700px">
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book8(2).jpg" id="pict2" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book8(3).jpg" id="pict3" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book8(4).jpg" id="pict4" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book8(5).jpg" id="pict5" width="100px" height="100px">
+          </th>
+        </tr>
+      </table>
+    </div>
+    <fieldset class="desc">
+      <div>
+        <span
+          style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
+          <b>
+            25% off
+          </b>
+        </span>
         <br>
-        <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-          $60.00
-        </span>
-        <span style="font-size:20px">
-          $45.00
-        </span>
-      </h2>
-      <h3 id="bookAuther">
-        By: Stephen Hawking
-      </h3>
-      <hr>
-      <p id="bookDescription"></p>
-      <div id="payDeliver">
-        <button class="checkOutBtn"
-          onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
-          <b>
-            Add To Cart
-          </b>
+        <h2 id="bookTitle">
+          Breif Answers, Big Questions
+          <br>
+          <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+            $60.00
+          </span>
+          <span style="font-size:20px">
+            $45.00
+          </span>
+        </h2>
+        <h3 id="bookAuther">
+          By: Stephen Hawking
+        </h3>
+        <hr>
+        <p id="bookDescription"></p>
+        <div id="payDeliver">
+          <button class="checkOutBtn"
+            onclick="localStorage.setItem('Breif Answers, Big Questions', '1');alert('added to your cart');">
+            <b>
+              Add To Cart
+            </b>
+          </button>
+          <button class="buy-btn" onclick="checkOutClicked();">
+            <b>
+              Buy Now
+            </b>
+          </button>
+        </div>
+      </div>
+    </fieldset>
+    <div class="paymentForm" id="checkOutForm">
+      <div class="paymentForm-container">
+        <h2>
+          Select your payment method
+        </h2>
+        <button class="btn"
+          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+          <i class="fa fa-paypal" style="color:blue;"></i>
+          Paypal
         </button>
-        <button class="buy-btn" onclick="checkOutClicked();">
-          <b>
-            Buy Now
-          </b>
+        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+          <i class="fa fa-credit-card" style="color:black;"></i>
+          Credit Card
+        </button>
+        <button class="btn cancel" onclick="checkOutCanceled();">
+          Cancel
         </button>
       </div>
     </div>
-  </fieldset>
-  <div class="paymentForm" id="checkOutForm">
-    <div class="paymentForm-container">
-      <h2>
-        Select your payment method
-      </h2>
-      <button class="btn"
-        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-        <i class="fa fa-paypal" style="color:blue;"></i>
-        Paypal
-      </button>
-      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-        <i class="fa fa-credit-card" style="color:black;"></i>
-        Credit Card
-      </button>
-      <button class="btn cancel" onclick="checkOutCanceled();">
-        Cancel
-      </button>
-    </div>
-  </div>
+  </section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <footer>
