--- a/BHS.html
+++ b/BHS.html
@@ -44,6 +44,7 @@
       Cart
     </div>
   </nav>
+  <section>
   <hr>
   <br>
   <div class="pictures" onclick="Increase();">
@@ -134,6 +135,7 @@
       </button>
     </div>
   </div>
+</section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <footer>
