--- a/BL.html
+++ b/BL.html
@@ -44,86 +44,89 @@
       Cart
     </div>
   </nav>
-  <hr>
-  <br>
-  <div class="pictures" onclick="Increase();">
-    <table>
-      <tr>
-        <th>
-          <img src="resources/book12(1).jpg" id="pict1" width="auto" height="700px">
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <img src="resources/book12(2).jpg" id="pict2" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book12(3).jpg" id="pict3" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book12(4).jpg" id="pict4" width="100px" height="100px">
-        </th>
-      </tr>
-    </table>
-  </div>
-  <fieldset class="desc">
-    <div>
-      <h2 id="bookTitle">
-        Ball Lightning
-        <br>
-        $20.00
-      </h2>
-      <h3 id="bookAuther">
-        By: Cixin Liu
-      </h3>
-      <hr>
-      <p id="bookDescription">
-        When Chen's parents are incinerated before his eyes by a blast of ball lightning, he devotes his
-        life to cracking the secret of this mysterious natural phenomenon. His search takes him to stormy
-        mountaintops, an experimental military weapons lab, and an old Soviet science station.
-        <br>
-        <br>
-        The more he learns, the more he comes to realize that ball lightning is just the tip of an entirely new
-        frontier.
-        While Chen's quest for answers gives purpose to his lonely life, it also pits him against soldiers and
-        scientists with motives of
-        their own: a beautiful army major with an obsession with dangerous weaponry, and a physicist who has no place
-        for ethical considerations in his
-        single-minded pursuit of knowledge.
-      </p>
-      <div id="payDeliver">
-        <button class="checkOutBtn" onclick="localStorage.setItem('Ball Lightning', '1');alert('added to your cart');">
-          <b>
-            Add To Cart
-          </b>
+  <section>
+    <hr>
+    <br>
+    <div class="pictures" onclick="Increase();">
+      <table>
+        <tr>
+          <th>
+            <img src="resources/book12(1).jpg" id="pict1" width="auto" height="700px">
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book12(2).jpg" id="pict2" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book12(3).jpg" id="pict3" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book12(4).jpg" id="pict4" width="100px" height="100px">
+          </th>
+        </tr>
+      </table>
+    </div>
+    <fieldset class="desc">
+      <div>
+        <h2 id="bookTitle">
+          Ball Lightning
+          <br>
+          $20.00
+        </h2>
+        <h3 id="bookAuther">
+          By: Cixin Liu
+        </h3>
+        <hr>
+        <p id="bookDescription">
+          When Chen's parents are incinerated before his eyes by a blast of ball lightning, he devotes his
+          life to cracking the secret of this mysterious natural phenomenon. His search takes him to stormy
+          mountaintops, an experimental military weapons lab, and an old Soviet science station.
+          <br>
+          <br>
+          The more he learns, the more he comes to realize that ball lightning is just the tip of an entirely new
+          frontier.
+          While Chen's quest for answers gives purpose to his lonely life, it also pits him against soldiers and
+          scientists with motives of
+          their own: a beautiful army major with an obsession with dangerous weaponry, and a physicist who has no place
+          for ethical considerations in his
+          single-minded pursuit of knowledge.
+        </p>
+        <div id="payDeliver">
+          <button class="checkOutBtn"
+            onclick="localStorage.setItem('Ball Lightning', '1');alert('added to your cart');">
+            <b>
+              Add To Cart
+            </b>
+          </button>
+          <button class="buy-btn" onclick="checkOutClicked();">
+            <b>
+              Buy Now
+            </b>
+          </button>
+        </div>
+      </div>
+    </fieldset>
+    <div class="paymentForm" id="checkOutForm">
+      <div class="paymentForm-container">
+        <h2>
+          Select your payment method
+        </h2>
+        <button class="btn"
+          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+          <i class="fa fa-paypal" style="color:blue;"></i>
+          Paypal
         </button>
-        <button class="buy-btn" onclick="checkOutClicked();">
-          <b>
-            Buy Now
-          </b>
+        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+          <i class="fa fa-credit-card" style="color:black;"></i>
+          Credit Card
+        </button>
+        <button class="btn cancel" onclick="checkOutCanceled();">
+          Cancel
         </button>
       </div>
     </div>
-  </fieldset>
-  <div class="paymentForm" id="checkOutForm">
-    <div class="paymentForm-container">
-      <h2>
-        Select your payment method
-      </h2>
-      <button class="btn"
-        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-        <i class="fa fa-paypal" style="color:blue;"></i>
-        Paypal
-      </button>
-      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-        <i class="fa fa-credit-card" style="color:black;"></i>
-        Credit Card
-      </button>
-      <button class="btn cancel" onclick="checkOutCanceled();">
-        Cancel
-      </button>
-    </div>
-  </div>
+  </section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <footer>
