--- a/LFA.html
+++ b/LFA.html
@@ -44,84 +44,87 @@
       Cart
     </div>
   </nav>
-  <hr>
-  <br>
-  <div class="pictures" onclick="Increase();">
-    <table>
-      <tr>
-        <th>
-          <img src="resources/book7(1).jpg" id="pict1" width="auto" height="700px">
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <img src="resources/book7(2).jpg" id="pict2" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book7(3).jpg" id="pict3" width="100px" height="100px">
-        </th>
-        <th>
-          <img src="resources/book7(4).jpg" id="pict4" width="100px" height="100px">
-        </th>
-      </tr>
-    </table>
-  </div>
-  <fieldset class="desc">
-    <div>
-      <h2 id="bookTitle">
-        Letters from an Astrophysicist
-        <br>
-        $25.00
-      </h2>
-      <h3 id="bookAuther">
-        By: Neil DeGrasse Tyson
-      </h3>
-      <hr>
-      <p id="bookDescription">
-        Astrophysicist Neil deGrasse Tyson has attracted one of the world`s largest online followings with his
-        fascinating, widely accessible insights
-        into science and our universe. Now, Tyson invites us to go behind the scenes of his public fame by revealing his
-        correspondence with people across
-        the globe who have sought him out in search of answers. In this hand-picked collection of 101 letters, Tyson
-        draws upon cosmic perspectives to address
-        a vast array of questions about science, faith, philosophy, life, and of course, Pluto. His succinct,
-        opinionated, passionate, and often funny
-        responses reflect his popularity and standing as a leading educator.
-      </p>
-      <div id="payDeliver">
-        <button class="checkOutBtn"
-          onclick="localStorage.setItem('Letters from an Astrophysicist', '1');alert('added to your cart');">
-          <b>
-            Add To Cart
-          </b>
+  <section>
+    <hr>
+    <br>
+    <div class="pictures" onclick="Increase();">
+      <table>
+        <tr>
+          <th>
+            <img src="resources/book7(1).jpg" id="pict1" width="auto" height="700px">
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="resources/book7(2).jpg" id="pict2" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book7(3).jpg" id="pict3" width="100px" height="100px">
+          </th>
+          <th>
+            <img src="resources/book7(4).jpg" id="pict4" width="100px" height="100px">
+          </th>
+        </tr>
+      </table>
+    </div>
+    <fieldset class="desc">
+      <div>
+        <h2 id="bookTitle">
+          Letters from an Astrophysicist
+          <br>
+          $25.00
+        </h2>
+        <h3 id="bookAuther">
+          By: Neil DeGrasse Tyson
+        </h3>
+        <hr>
+        <p id="bookDescription">
+          Astrophysicist Neil deGrasse Tyson has attracted one of the world`s largest online followings with his
+          fascinating, widely accessible insights
+          into science and our universe. Now, Tyson invites us to go behind the scenes of his public fame by revealing
+          his
+          correspondence with people across
+          the globe who have sought him out in search of answers. In this hand-picked collection of 101 letters, Tyson
+          draws upon cosmic perspectives to address
+          a vast array of questions about science, faith, philosophy, life, and of course, Pluto. His succinct,
+          opinionated, passionate, and often funny
+          responses reflect his popularity and standing as a leading educator.
+        </p>
+        <div id="payDeliver">
+          <button class="checkOutBtn"
+            onclick="localStorage.setItem('Letters from an Astrophysicist', '1');alert('added to your cart');">
+            <b>
+              Add To Cart
+            </b>
+          </button>
+          <button class="buy-btn" onclick="checkOutClicked();">
+            <b>
+              Buy Now
+            </b>
+          </button>
+        </div>
+      </div>
+    </fieldset>
+    <div class="paymentForm" id="checkOutForm">
+      <div class="paymentForm-container">
+        <h2>
+          Select your payment method
+        </h2>
+        <button class="btn"
+          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+          <i class="fa fa-paypal" style="color:blue;"></i>
+          Paypal
         </button>
-        <button class="buy-btn" onclick="checkOutClicked();">
-          <b>
-            Buy Now
-          </b>
+        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+          <i class="fa fa-credit-card" style="color:black;"></i>
+          Credit Card
+        </button>
+        <button class="btn cancel" onclick="checkOutCanceled();">
+          Cancel
         </button>
       </div>
     </div>
-  </fieldset>
-  <div class="paymentForm" id="checkOutForm">
-    <div class="paymentForm-container">
-      <h2>
-        Select your payment method
-      </h2>
-      <button class="btn"
-        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-        <i class="fa fa-paypal" style="color:blue;"></i>
-        Paypal
-      </button>
-      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-        <i class="fa fa-credit-card" style="color:black;"></i>
-        Credit Card
-      </button>
-      <button class="btn cancel" onclick="checkOutCanceled();">
-        Cancel
-      </button>
-    </div>
-  </div>
+  </section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <footer>
