--- a/YAH.html
+++ b/YAH.html
@@ -44,77 +44,79 @@
       Cart
     </div>
   </nav>
-  <hr>
-  <br>
-  <div class="row">
-    <div class="column">
-      <img src="resources/book18(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+  <section>
+    <hr>
+    <br>
+    <div class="row">
+      <div class="column">
+        <img src="resources/book18(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+      </div>
+      <div class="column">
+        <img src="resources/book18(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+      </div>
+      <div class="column">
+        <img src="resources/book18(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+      </div>
+      <div class="column">
+        <img src="resources/book18(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+      </div>
     </div>
-    <div class="column">
-      <img src="resources/book18(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book18(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book18(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-  </div>
 
-  <div class="container">
-    <span onclick="this.parentElement.style.display='none'" class="closebtn">
-      &times;
-    </span>
-    <img id="expandedImg" style="width:auto;height:0.1%;">
-  </div>
-  <fieldset class="desc">
-    <div>
-      <h2 id="bookTitle">
-        You Are Here: Around the World in 92 Minutes
-        <br>
-        $25.00
-      </h2>
-      <h3 id="bookAuther">
-        By: Chris Hadfield
-      </h3>
-      <hr>
-      <p id="bookDescription">
+    <div class="container">
+      <span onclick="this.parentElement.style.display='none'" class="closebtn">
+        &times;
+      </span>
+      <img id="expandedImg" style="width:auto;height:0.1%;">
+    </div>
+    <fieldset class="desc">
+      <div>
+        <h2 id="bookTitle">
+          You Are Here: Around the World in 92 Minutes
+          <br>
+          $25.00
+        </h2>
+        <h3 id="bookAuther">
+          By: Chris Hadfield
+        </h3>
+        <hr>
+        <p id="bookDescription">
 
-      </p>
-      <div id="payDeliver">
-        <button class="checkOutBtn"
-          onclick="localStorage.setItem('You Are Here: Around the World in 92 Minutes ', '1');alert('added to your cart');">
-          <b>
-            Add To Cart
-          </b>
+        </p>
+        <div id="payDeliver">
+          <button class="checkOutBtn"
+            onclick="localStorage.setItem('You Are Here: Around the World in 92 Minutes ', '1');alert('added to your cart');">
+            <b>
+              Add To Cart
+            </b>
+          </button>
+          <button class="buy-btn" onclick="checkOutClicked();">
+            <b>
+              Buy Now
+            </b>
+          </button>
+        </div>
+      </div>
+    </fieldset>
+    <div class="paymentForm" id="checkOutForm">
+      <div class="paymentForm-container">
+        <h2>
+          Select your payment method
+        </h2>
+        <button class="btn"
+          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+          <i class="fa fa-paypal" style="color:blue;"></i>
+          Paypal
         </button>
-        <button class="buy-btn" onclick="checkOutClicked();">
-          <b>
-            Buy Now
-          </b>
+        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+          <i class="fa fa-credit-card" style="color:black;"></i>
+          Credit Card
+        </button>
+        <button class="btn cancel" onclick="checkOutCanceled();">
+          Cancel
         </button>
       </div>
     </div>
-  </fieldset>
-  <div class="paymentForm" id="checkOutForm">
-    <div class="paymentForm-container">
-      <h2>
-        Select your payment method
-      </h2>
-      <button class="btn"
-        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-        <i class="fa fa-paypal" style="color:blue;"></i>
-        Paypal
-      </button>
-      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-        <i class="fa fa-credit-card" style="color:black;"></i>
-        Credit Card
-      </button>
-      <button class="btn cancel" onclick="checkOutCanceled();">
-        Cancel
-      </button>
-    </div>
-  </div>
+  </section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <footer>
